# Adipatch

./: git_github.txt
basics/: CheckYourselfweek2.py  CheckYourselfweek4.py  adi.py  comprehensions.py  data_types.py  dick_types.py  linux_commands.txt  lists_type.py  logical_exp.py  loops.py  set_type.py  str_type.py  testAdi_type.py  try_except_.py
functions/: adilet.py  build-in-functions.py  decorators.py  functions.py  scopes.py  СheckYourselfweek3.py
pip_venv/: pip_venv.txt  pyproject.toml  requirements.txt
py_tests/: pyproject.toml
py_tests/tests/: test_func.py
