[tool.poetry]
name = "deactivate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "clear"

[tool.poetry.dependencies]
python = "3.10.12"
pytest = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
